--- a/Module-03/css/styles.css
+++ b/Module-03/css/styles.css
@@ -17,48 +17,33 @@ img {
   height: auto;
 }
 .navigation {
-  width: 900px;
-  padding: 38px 0 48px 0;
-  margin: 0 auto;
-  margin-top: 30px;
-  margin-bottom: 45px;
+  padding: 80px 0 105px 130px;
 }
 .wrapper {
   width: 900px;
   margin: 0 auto;
 }
-.navigation ul {
-  list-style: none;
-}
-.navigation-menu {
-  margin: 0;
-  padding: 0;
-}
-.navigation li:first-child > a {
+.navigation li :hover {
   color: #03a9f4;
 }
+.navigation ul {
+  padding: 0;
+  }
 .navigation-menu a {
+  display: block;
   text-decoration: none;
   font-size: 14px;
   line-height: 24px;
   color: #626262;
 }
+.navigation-menu {
+  list-style: none;
+  font-size: 0;
+}
 .navigation-menu li {
   display: inline-block;
   text-transform: uppercase;
-}
-.navigation-menu li:first-child > a {
-  margin-left: 165px;
-  margin-right: 121px;
-}
-.navigation-menu li:nth-child(2n) {
-  margin-right: 105px;
-}
-.navigation-menu li:nth-child(3n) {
-  margin-right: 100px;
-}
-.navigation-menu li:last-child > a {
-  margin-right: 0;
+  margin-right: 125px;
 }
 .main-content {
   list-style: none;
@@ -107,13 +92,14 @@ button {
   text-align: center;
 }
 button {
-  margin: 55px auto;
+  margin: 55px 366px;
   border: 1px solid #626262;
   background-color: #fff;
   width: 165px;
   height: 60px;
 }
-.btn a {
+button a {
+  display:block;
   text-decoration: none;
   color: #626262;
 }
