--- a/Module-03/css/styles.css
+++ b/Module-03/css/styles.css
@@ -17,18 +17,19 @@ img {
   height: auto;
 }
 .navigation {
-  padding: 80px 0 105px 130px;
+  padding: 70px 0 60px 130px;
 }
 .wrapper {
   width: 900px;
   margin: 0 auto;
+  margin-bottom: 50px;
 }
 .navigation li :hover {
   color: #03a9f4;
 }
 .navigation ul {
   padding: 0;
-  }
+}
 .navigation-menu a {
   display: block;
   text-decoration: none;
@@ -43,6 +44,8 @@ img {
 .navigation-menu li {
   display: inline-block;
   text-transform: uppercase;
+}
+.navigation-menu li:not(:last-child) {
   margin-right: 125px;
 }
 .main-content {
@@ -59,25 +62,30 @@ img {
   margin-right: 58px;
   font-size: 0;
 }
-.main-content-item:nth-child(-n + 4) {
+.main-content-item{
   margin-bottom: 100px;
 }
 .main-content :nth-child(2n) {
   margin-right: 0;
 }
+.main-content img{
+  margin-bottom: 28px;
+}
 .img-name {
-  margin-top: 28px;
+  margin: 0;
+  margin-bottom: 28px;
   font-size: 14px;
   text-transform: uppercase;
   color: #c8c3b8;
 }
 .img-header {
-  margin-top: 25px;
+  margin: 0;
   margin-bottom: 35px;
   font-size: 30px;
   color: #626262;
 }
 .img-text {
+  margin: 0;
   font-size: 14px;
   line-height: 24px;
   color: #626262;
@@ -92,14 +100,14 @@ button {
   text-align: center;
 }
 button {
-  margin: 55px 366px;
+  margin: 0 366px;
   border: 1px solid #626262;
   background-color: #fff;
   width: 165px;
   height: 60px;
 }
 button a {
-  display:block;
+  display: block;
   text-decoration: none;
   color: #626262;
 }
