--- a/Module-04/css/style.css
+++ b/Module-04/css/style.css
@@ -1,6 +1,9 @@
 body {
-  font-family: "myriad pro" "roboto" sans-serif;
+  font-family: "Open Sans", "Roboto", sans-serif;
   color: #515151;
+  margin: 0 auto;
+  padding: 0;
+  width: 1110px;
 }
 img {
   display: block;
@@ -12,29 +15,166 @@ img {
   content: "";
   clear: both;
 }
-.page-header {
-  background: rgb(190, 119, 119);
-  margin: 0 auto;
-  padding: 0;
-  width: 1110px;
+.navigation {
+  height: 22px;
+  margin: 38px auto 60px;
 }
-.page-header li {
-    background: rgb(118, 170, 105);
-    float: left;
-    }
-.img-logo img{
-    float: left;
-}
-.nav-list {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  text-transform: uppercase;
-  
+.img-logo {
+  float: left;
 }
 .nav-list a {
+  font-family: "opensans";
   text-decoration: none;
   font-size: 14px;
   line-height: 11px;
+  text-transform: uppercase;
+  font-weight: 600;
+  color: #0f0101;
+  padding-right: 30px;
+}
+.nav-list a:hover {
+  color: #1abc9c;
+}
+.nav-list :last-child {
+  padding-right: 0;
+}
+.nav-list {
+  float: right;
+}
+.section-title {
+  font-family: "roboto";
+  font-weight: 900;
+  text-align: center;
+  font-size: 30px;
+  line-height: 32px;
+  text-transform: uppercase;
   color: #515151;
+  margin-bottom: 70px;
+}
+h2 {
+  display: inline-block;
+  color: #515151;
+  line-height: 2;
+  position: relative;
+  margin: 0;
+}
+h2:after {
+  background-color: #1abc9c;
+  display: block;
+  content: "";
+  height: 6px;
+  width: 0%;
+  left: 50%;
+  position: absolute;
+  -webkit-transition: width 0.3s ease-in-out;
+  transition: width 0.3s ease-in-out;
+  transform: translateX(-50%);
+}
+h2:hover:after,
+h2:focus:after {
+  width: 160px;
+}
+.section-galery {
+  height: 740px;
+  margin-bottom: 90px;
+}
+.section-galery ul {
+  margin: 0;
+  padding: 0;
+}
+.section-galery-item {
+  font-family: "roboto";
+  width: 255px;
+  list-style: none;
+  text-transform: uppercase;
+  font-size: 18px;
+  line-height: 32px;
+  color: #fff;
+  float: left;
+  margin-right: 30px;
+}
+.section-galery-item:hover .product-price {
+  background-color: #4ec6ab;
+}
+.section-galery-item:hover .product-name {
+  background-color: #4ec6ab;
+}
+.product-price :hover .product-name :hover {
+  background-color: #4ec6ab;
+}
+.section-galery-item:nth-child(-n + 4) {
+  padding-bottom: 30px;
+}
+.section-galery :nth-child(4) {
+  margin-right: 0;
+}
+.section-galery :nth-child(8) {
+  margin-right: 0;
+}
+.product-name {
+  margin: 0;
+  width: 188px;
+  float: left;
+  background-color: #323232;
+  padding-left: 13px;
+}
+.product-price {
+  width: 54px;
+  float: right;
+  background-color: #8c8c8c;
+  text-align: center;
+  margin: 0;
+}
+.latest-news {
+  height: 707px;
+  margin-bottom: 50px;
+}
+.blog-features-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+.blog-title {
+  margin: 0;
+  padding-bottom: 10px;
+}
+.blog-features-list img {
+  margin: 0;
+  padding-bottom: 10px;
+}
+.blog-features-item {
+  width: 350px;
+  float: left;
+  margin-right: 30px;
+}
+.blog-features-list li:last-child {
+  margin-right: 0;
+}
+.latest-news {
+  font-size: 18px;
+  line-height: 26px;
+  font-family: "open sans";
+  font-weight: 600;
+  color: #555252;
+}
+.blog-text {
+  font-family: "open sans";
+  font-size: 14px;
+  line-height: 26px;
+  font-weight: 400;
+  color: #555252;
+  margin: 0;
+  padding-bottom: 10px;
+}
+button {
+  width: 165px;
+  height: 52px;
+  background-color: #4ec6ab;
+  border-radius: 5px;
+  font-family: "open sans";
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 300;
+  color: #ffffff;
+  text-decoration: none;
 }
