--- a/Module-04/css/style.css
+++ b/Module-04/css/style.css
@@ -29,9 +29,10 @@ img {
 }
 .nav-list li {
   display: inline-block;
-  padding-right: 30px;
+  margin-right: 30px;
 }
 .nav-list a {
+  display: block;
   font-family: "opensans";
   text-decoration: none;
   font-size: 14px;
@@ -39,16 +40,16 @@ img {
   text-transform: uppercase;
   font-weight: 600;
   color: #0f0101;
-  padding-right: 30px;
 }
 .nav-list a:hover {
   color: #1abc9c;
 }
 .nav-list :last-child {
-  padding-right: 0;
+  margin-right: 0;
 }
 .nav-list {
   margin: 0;
+  padding: 0;
   float: right;
   list-style: none;
 }
@@ -56,14 +57,19 @@ img {
   padding-bottom: 25px;
 }
 .titles {
+  margin: 0;
   text-align: center;
   font-family: "roboto";
   font-weight: 900;
   font-size: 48px;
-  line-height: 32px;
+  line-height: 33px;
   text-transform: uppercase;
   color: #515151;
   margin-bottom: 70px;
+}
+.titles:hover:after,
+.titles:focus:after {
+  width: 160px;
 }
 .titles {
   color: #515151;
@@ -80,10 +86,6 @@ img {
   position: absolute;
   transition: width 0.3s ease-in-out;
   transform: translateX(-50%);
-}
-.titles:hover:after,
-.titles:focus:after {
-  width: 160px;
 }
 .feature-products ul {
   margin: 0;
@@ -140,8 +142,21 @@ img {
 .blog-title {
   margin: 0;
   margin-bottom: 10px;
+  position: relative;
 }
-
+.blog-title:hover:after,
+.blog-title:focus:after {
+  width: 150px;
+}
+.blog-title:after {
+  background-color: #1abc9c;
+  display: block;
+  content: "";
+  height: 3px;
+  width: 0%;
+  position: absolute;
+  transition: width 0.3s ease-in-out;
+}
 .blog-features-list img {
   margin-bottom: 15px;
 }
@@ -170,21 +185,17 @@ img {
   margin: 0;
   margin-bottom: 15px;
 }
-button {
-  width: 165px;
-  height: 52px;
-  border-radius: 5px;
+.blog-features-item a {
+  display: block;
+  width: 80px;
+  text-decoration: none;
+  color: #0f0101;
   font-family: "open sans";
   font-size: 16px;
   line-height: 26px;
   font-weight: 300;
-  color: #ffffff;
-  text-decoration: none;
 }
-button a {
-  text-decoration: none;
-  color: #0f0101;
-}
-button:hover {
+.blog-features-item a:hover {
   background-color: #1abc9c;
+  padding: 15px 30px;
 }
