--- a/Module-05/css/style.css
+++ b/Module-05/css/style.css
@@ -219,6 +219,7 @@ h2 {
   opacity: 0;
 }
 .buttons {
+  font-size: 0;
   position: absolute;
   text-align: center;
   width: 170px;
@@ -229,8 +230,12 @@ h2 {
   transform: translate(-50%, -50%);
 }
 .buttons li {
+  margin-right: 5px;
   list-style: none;
   display: inline-block;
+}
+.buttons li:nth-last-child(-n + 2) {
+  margin-right: 0;
 }
 .btn1 {
   background-image: url(../img/BUTTON1.png);
@@ -271,11 +276,14 @@ h2 {
   background-image: url(../img/bin.png);
   background-repeat: no-repeat;
   background-color: unset;
+  background-position: 10px center;
   display: inline-block;
+  padding-left: 31px;
 }
-.btn4 p {
+.btn4 {
   font-family: "Open Sans";
   font-size: 14px;
+  color: #fff;
   text-transform: uppercase;
 }
 .footer {
@@ -298,3 +306,5 @@ span {
   display: inline-block;
   list-style: none;
 }
+
+/* :nth-last-child(-n + 2) */
