--- a/Module-06/css/style.css
+++ b/Module-06/css/style.css
@@ -59,11 +59,11 @@ img {
     font-size: 14px;
     text-decoration: none;
     text-transform: uppercase;
-    /* margin-right: 60px; */
+    position: relative;
 }
 
-.nav-list :last-child>li {
-    padding-right: 0;
+.nav-list :last-child {
+    margin-right: 0;
 }
 
 .nav-list :hover {
@@ -74,7 +74,7 @@ img {
     background-color: #f38181;
     display: block;
     content: "";
-    height: 6px;
+    height: 3px;
     width: 0%;
     position: absolute;
     transition: width 0.3s ease-in-out;
@@ -82,7 +82,7 @@ img {
 }
 
 .nav-list a:hover:after {
-    width: 60px;
+    width: 100%;
 }
 
 .title-service {
@@ -106,7 +106,7 @@ img {
     background-color: #f38181;
     display: block;
     content: "";
-    height: 6px;
+    height: 3px;
     width: 0%;
     left: 50%;
     position: absolute;
@@ -131,6 +131,10 @@ img {
 .services-items li {
     list-style: none;
     margin-bottom: 40px;
+}
+
+.services-items :nth-last-child(-n+3) {
+    margin-bottom: 0;
 }
 
 .icon-alarm {
@@ -208,6 +212,7 @@ img {
 .services-items {
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 50px;
 }
 
 .services {
@@ -219,7 +224,7 @@ img {
     background-color: #f38181;
     display: block;
     content: "";
-    height: 6px;
+    height: 3px;
     width: 0%;
     left: 50%;
     position: absolute;
@@ -246,6 +251,7 @@ img {
     font-weight: 400;
     font-size: 14px;
     text-transform: uppercase;
+    margin-bottom: 10px;
 }
 
 .team-list {
@@ -376,6 +382,10 @@ input[type="“text”"] {
     position: relative;
     transition: none;
     transition-duration: 200ms;
+}
+
+.guys img {
+    margin-bottom: 20px;
 }
 
 .guys:hover .hover-team {
