--- a/Module-08/css/style.css
+++ b/Module-08/css/style.css
@@ -104,7 +104,8 @@
      margin-bottom: 70px;
  }
  
- .title1 {
+ .logo a {
+     text-decoration: none;
      font-family: Montserrat, sans-serif;
      font-size: 20px;
      color: #ffffff;
